<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wondrobe</string>
    <string name="isotype">Proyect isotype</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_save">Save</string>
    <string name="title_add">Add</string>
    <string name="title_wardrobe">Wardrobe</string>
    <string name="title_user">User</string>
    <string name="first_name">First name</string>
    <string name="username">Username</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_username">Enter your username</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="already_have_an_account">Already have an account in Wondrobe?</string>
    <string name="continue_with">or continue with</string>
    <string name="signup_with_google">Signup with Google</string>
    <string name="new_to_wondrobe">New to Wondrobe?</string>
    <string name="create_account">Create an Account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="default_web_client_id">172335089066-h9saq08h5dms9aaalio8bgepr1q7aou3.apps.googleusercontent.com</string>
    <string name="search">Search …</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="enter_new_username">Enter a username</string>
    <string name="biography">Biography</string>
    <string name="enter_new_biography">Enter a biography</string>
    <string name="enter_new_name">Enter a name</string>
    <string name="take_photo">Take a photo</string>
    <string name="existing_photo">Take an existing photo</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="for_you">For you</string>
    <string name="following">Following</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="link_password">We\'ll send a link that will sign you into the app instantly</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="enter_verification_code">Verification code</string>
    <string name="show_terms_and_conditions">Show Terms and Conditions</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions_text">Wondrobe Terms and Conditions\n\nWelcome to the Wondrobe community!\n\nThese Terms and Conditions ("Terms") outline how you can access and use the Wondrobe mobile app ("App"). Wondrobe is a social media platform where you can share content and connect with others. By using the App, you agree to these Terms. If you don’t agree, you won’t be able to use Wondrobe.\n\nUnderstanding the Basics\n\nAccount: This refers to your personal Wondrobe profile created during registration.\nContent: Any text, images, videos, or anything you share through the App.\nUser: Anyone who uses the Wondrobe App.\nWe/Us/Our/Wondrobe: Refers to the App owner, Wondrobe.\n\nUsing Wondrobe Right\n\nWe grant you permission (a license) to use the App for personal, non-commercial purposes. You can’t use it for anything else without our written approval.\n\nWhat’s Not Allowed on Wondrobe\n\nThere are things you can’t do on Wondrobe to keep the platform safe and enjoyable for everyone. Here are some examples:\n\nSharing content that’s illegal, harmful, or offensive (threats, harassment, hate speech, etc.).\nPosting anything that violates someone else’s copyright, trademark, or other intellectual property rights.\nSending unwanted advertising or spam.\nImpersonating someone else or lying about who you are.\nTrying to gain unauthorized access to the App or other accounts.\nUsing methods that interfere with the App’s proper functioning.\nModifying content that doesn’t belong to you.\nDamaging, disabling, or overloading the App or connected systems.\nBreaking any laws or regulations.\n\nKeeping Your Account Safe\n\nWe have the right to terminate your account and access to the App anytime, for any reason, without notice. This can also happen if you violate these Terms.\n\nCancelling Your Wondrobe Account\n\nIf you want to cancel your account, just contact us at wondrobe@gmail.com.\n\nYour Content on Wondrobe\n\nYou own all your content, but by sharing it on the App, you grant us permission to use it in connection with Wondrobe and our business. This includes using, reproducing, modifying, distributing, and displaying your content, even after you terminate your account.\n\nContent From Other Users\n\nThe App might have content shared by other users. We don’t control or endorse it, and we’re not responsible for its accuracy or legality. You acknowledge that you might see content that’s offensive, harmful, or inaccurate, and we won’t be liable for any damages arising from your use of such content.\n\nCopyright Issues\n\nIf you believe someone’s content on the App infringes your copyright, you can submit a copyright infringement notice by emailing wondrobe@gmail.com.\n\nDisclaimer of Warranties\n\nWe provide the App “as is” and “as available”. This means we don’t guarantee that it will always work perfectly, and the information or content on the App might have errors. You agree that you use the App at your own risk.\n\nLimitation of Liability\n\nTo the fullest extent permitted by law, we won’t be held liable for any damages you might experience by using the App.\n\nContact Us\n\nIf you have any questions about these Terms, please contact us at wondrobe@gmail.com.</string>
    <string name="next">Next</string>
    <string name="publish">PUBLISH</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_title">Enter title</string>
    <string name="image_desc">Image description</string>
    <string name="post_tittle">Post tittle</string>
    <string name="post_description">Post description</string>
    <string name="post_date">Post date</string>
    <string name="date_post">Date Post</string>
    <string name="delete_post">DELETE POST</string>
    <string name="edit_post">Edit post</string>
    <string name="select_items">Select items</string>
    <string name="name_clothes">Enter name clothes</string>
    <string name="upload_clothes">Upload clothes to see here</string>
    <string name="clothes_option">Clothes Option</string>
    <string name="no_photos_in_the_gallery">No photos in the gallery</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="outfits">Outfits</string>
    <string name="delete_clothes">Delete Clothes</string>
    <string name="no_posts">No posts</string>
    <string name="enter_a_biography">Enter a biography</string>
    <string name="enter_a_tittle">Enter a tittle</string>
    <string name="create_outfit">Create outfit</string>
</resources>