<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ForgotPassword">

    <!-- Botón de retroceso -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_chevron_left"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Botón "Send" -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/kollektif"
        android:text="@string/send"
        android:background="@drawable/button_purple"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <!-- Título "Forgot your password" -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:fontFamily="@font/kollektif"
        style="@style/TextView.DarkTheme"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        android:layout_marginTop="13dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_password"
        android:fontFamily="@font/kollektif"
        style="@style/TextView.DarkTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"/>

    <!-- Input para escribir el correo -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kollektif"
        android:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
